<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Paramètres Avancés</string>
    <string name="system">Système</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="divers">Divers</string>
    <string name="update">Mise à jour</string>
    <string name="display_settings_title_head">Paramètres Avancés</string>
    
        <!-- Divers -->
    <string name="mnlk_Settings">Paramètres Avancés</string>
    <string name="error">Erreur</string>
    <string name="rebooting">Redémarrage...</string>
    <string name="hardware">Hardware</string>
    <string name="download_install_error">Download or install has finished unexpectedly!</string>
       
    	<!-- Trackball settings -->
    <string name="pref_trackball_wake_title">Trackball wake</string>
    <string name="pref_trackball_wake_summary">Réveil l\'écran en appyant sur le Tackball</string>
    <string name="pref_trackball_unlock_title">Trackball unlock</string>
    <string name="pref_trackball_unlock_summary">Déverrouille l\'écran en appyant sur le Tackball</string>
    
    	<!-- ADB WIFI & USB debugging -->
    <string name="adb_settings_title">Paramètres ADB</string>
    <string name="adb_notify">Notification du Débogage USB</string>
    <string name="adb_notify_summary">Affiche une notification si téléphone est connecter en mode Débogage USB</string>
    <string name="adb_wifi_title">Mode ADB WIFI</string>
    <string name="adb_wifi_summary_on">ADB démarré en mode WIFI</string>
    <string name="adb_wifi_summary_off">ADB démarré en mode USB\nNE PAS ACTIVER le mode WIFI si le wifi n\'est pas connecté,risque de FC</string>
    <string name="adb_wifi_on">Demarre ADB en mode WIFI...</string>
    <string name="adb_wifi_off">Demarre ADB en mode USB...</string>
    <string name="adb_instructions_on" formatted="false">Votre PC et l\'appareil doivent être sur le même réseau.\n\nVous devez redémarrer ADB sur le PC en mode sans fil.\nTapez:\n$ adb connect %ip%:%P%</string>
    <string name="adb_instructions_off">Vous devez brancher le cable USB.\n\nVous devez redémarrer ADB sur le PC en mode USB.\nTapez:\n$ adb usb</string>

		<!-- Electron On / Off -->
    <string name="electron_beam_settings_title">Paramètres des Animations</string>
    <string name="pref_electron_beam_animation_on">Animation d\'allumage</string>
    <string name="pref_electron_beam_animation_off">Animation de fermeture</string>
    
    	<!-- System Info-->
    <string name="system_info_title">System Info</string>
    <string name="cpu_info">CPU Info</string>
    <string name="mem_info">Mem Info (Dispo./total)</string>
    <string name="mod_version">Mod version</string>
    <string name="mod_version_default">Inconnu</string>
    <string name="device_info_default">"Inconnu"</string>
    
    	<!-- Music control lock screen-->
    <string name="lockscreen_settings_title">Paramètres de l\'écran de verrouillage</string>
    <string name="pref_lockscreen_music_controls_title">Contrôles de la lecture</string>
    <string name="pref_lockscreen_music_controls_summary">Afficher les contrôles permettant de commander la lecture musicale sur l\'écran de verrouillage</string>
    <string name="pref_lockscreen_always_music_controls_title">Toujours les afficher</string>
    <string name="pref_lockscreen_always_music_controls_summary">Toujours afficher les contrôles permettant de commander la lecture musicale, même sans lecture en cours</string>   
    
    	<!-- Expanded View Power Widget -->
    <string name="title_expanded_widget">Option des Widgets</string>    	
    <string name="title_buttons">Boutons</string>	
    <string name="title_widget_buttons">Choix des Widget</string> 	
    <string name="title_widget_order">Ordre des widgets</string>
    <string name="summary_widget_order">Organise l\'ordre des widgets</string>
    <string name="summary_expanded_widget">Afficher le contrôle de l\'alimentation dans la barre de notification</string>
    <string name="title_widget_picker">Boutons du widget</string>
    <string name="summary_widget_picker">Choisir quels boutons seront affichés</string>
    <string name="title_toggle_wifi">Wi-Fi</string>
    <string name="title_toggle_bluetooth">Bluetooth</string>
    <string name="title_toggle_gps">GPS</string>
    <string name="title_toggle_sound">Sonnerie</string>
    <string name="title_toggle_sync">Synchronisation</string>
    <string name="title_toggle_wifiap">Partage Wi-Fi</string>
    <string name="title_toggle_screentimeout">Timeout de l\'écran</string>
    <string name="title_toggle_mobiledata">Données mobiles</string>
    <string name="title_toggle_lockscreen">Verrouillage de l\'écran</string>
    <string name="title_toggle_networkmode">2G/3G</string>
    <string name="title_toggle_autorotate">Rotation automatique</string>
    <string name="title_toggle_airplane">Mode avion</string>
    <string name="title_toggle_sleep">Verrouillage</string>
    <string name="title_button_modes">Modes de fonctionnement des boutons</string>
    <string name="pref_network_mode_title">Modes 2G/3G</string>
    <string name="pref_network_mode_summary">Choisir comment le bouton 2G/3G se comportera</string>
    <string name="pref_screentimeout_mode_title">Modes Timeout de l\'écran</string>
    <string name="pref_screentimeout_mode_summary">Choisir comment le bouton Timeout de l\'écran se comportera</string>
    <string name="pref_ring_mode_title">Modes Sonnerie</string>
    <string name="pref_ring_mode_summary">Choisir comment le bouton Sonnerie se comportera</string>
    
    	<!-- Setting checkbox title whether to allow killing foreground app by longpress on BACK. -->
    <string name="kill_app_longpress_back">Stop app via long-press</string>
    <!-- Setting checkbox summary whether to allow killing foreground app by longpress on BACK. -->
    <string name="kill_app_longpress_back_summary">Long-pressing the BACK button will kill the foreground application.</string>
    
    	<!-- lockscreen_phone_messaging_control -->
    <string name="pref_lockscreen_phone_messaging_control_title">Téléphone et messages</string>
    <string name="pref_lockscreen_phone_messaging_control_summary">Accéder au téléphone et aux messages depuis l\'écran de verrouillage</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="test1">test</string>
    
</resources>
