<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
      android:title="@string/lockscreen_settings_title">
      
        <CheckBoxPreference android:key="pref_trackball_wake"
        android:title="@string/pref_trackball_wake_title"
        android:summary="@string/pref_trackball_wake_summary" />

   		<CheckBoxPreference android:key="pref_trackball_unlock"
        android:title="@string/pref_trackball_unlock_title"
        android:summary="@string/pref_trackball_unlock_summary" />
      
        <CheckBoxPreference
        android:key="lockscreen_music_controls"
        android:title="@string/pref_lockscreen_music_controls_title"
        android:summary="@string/pref_lockscreen_music_controls_summary" />
        
        <CheckBoxPreference
        android:key="lockscreen_always_music_controls"
        android:dependency="lockscreen_music_controls"
        android:title="@string/pref_lockscreen_always_music_controls_title"
        android:summary="@string/pref_lockscreen_always_music_controls_summary" />
        
        <CheckBoxPreference android:key="lockscreen_phone_messaging_tab"
        android:title="@string/pref_lockscreen_phone_messaging_control_title"
        android:summary="@string/pref_lockscreen_phone_messaging_control_summary" />

  </PreferenceCategory>
 
  
</PreferenceScreen>